<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cherr.triviaapplication.StatsActivity">

    <TextView
        android:id="@+id/textViewStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="43dp"
        android:layout_toEndOf="@+id/buttonQuit"
        android:text="@string/TVStatus"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewStats"
        android:layout_marginStart="54dp"
        android:layout_marginTop="27dp"
        android:text="@string/TVCorrect" />

    <TextView
        android:id="@+id/textViewPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewCorrect"
        android:layout_below="@+id/textViewCorrect"
        android:layout_marginTop="23dp" />

    <ProgressBar
        android:id="@+id/progressBarPercentage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewTryMessage"
        android:layout_alignTop="@+id/textViewPercentage" />

    <TextView
        android:id="@+id/textViewTryMessage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:text="@string/TVTry" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="29dp"
        android:text="@string/BQuit" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:layout_alignTop="@+id/buttonQuit"
        android:layout_marginEnd="47dp"
        android:text="@string/BTry" />
</RelativeLayout>
