<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cherr.triviaapplication.MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="29dp"
        android:layout_toStartOf="@+id/buttonStart"
        android:text="@string/TVWelcome"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewTrivia"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewWelcome"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/textViewReady"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewTrivia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/TVready"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:textAllCaps="false"
        android:layout_marginEnd="17dp"
        android:layout_toStartOf="@+id/textViewWelcome"
        android:text="@string/bExit" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonExit"
        android:textAllCaps="false"
        android:layout_alignBottom="@+id/buttonExit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp"
        android:text="@string/BStart" />


</RelativeLayout>
